--- a/index.html
+++ b/index.html
@@ -126,7 +126,72 @@
         #fullscreen-controls {
             display: none;
         }
-        /* Removed hiding of footer in fullscreen to keep it visible */
+
+        /* Mobile-specific styles (applied via class or media query) */
+        .mobile #toolbar {
+            flex-direction: column;
+            align-items: center;
+        }
+        .mobile button {
+            padding: 12px 16px; /* Larger buttons for touch */
+            font-size: 18px;
+            margin: 5px;
+        }
+        .mobile #footer {
+            flex-direction: column;
+            align-items: center;
+        }
+        .mobile #formatting-tools {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+        }
+        .mobile #formatting-tools button {
+            padding: 8px 12px;
+            font-size: 16px;
+            margin: 5px;
+        }
+        .mobile #editor {
+            font-size: 18px; /* Larger text for mobile readability */
+            padding: 15px;
+        }
+        .mobile #stats {
+            margin-top: 10px;
+        }
+
+        /* Responsive media query for small screens (fallback if JS detection fails) */
+        @media (max-width: 768px) {
+            #toolbar {
+                flex-direction: column;
+                align-items: center;
+            }
+            button {
+                padding: 12px 16px;
+                font-size: 18px;
+                margin: 5px;
+            }
+            #footer {
+                flex-direction: column;
+                align-items: center;
+            }
+            #formatting-tools {
+                display: flex;
+                flex-wrap: wrap;
+                justify-content: center;
+            }
+            #formatting-tools button {
+                padding: 8px 12px;
+                font-size: 16px;
+                margin: 5px;
+            }
+            #editor {
+                font-size: 18px;
+                padding: 15px;
+            }
+            #stats {
+                margin-top: 10px;
+            }
+        }
     </style>
 </head>
 <body>
@@ -170,6 +235,17 @@
     </div>
 
     <script>
+        // Detect if user is on mobile browser
+        function isMobile() {
+            const userAgent = navigator.userAgent || navigator.vendor || window.opera;
+            return /android|iPad|iPhone|iPod|windows phone/i.test(userAgent) && !window.MSStream;
+        }
+
+        // Apply mobile class if detected
+        if (isMobile()) {
+            document.body.classList.add('mobile');
+        }
+
         let fontSize = 16;
         let history = [];
         let historyIndex = -1;
