--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Enhanced Text Writer/Editor</title>
+    <title>Enhanced Text Writer/Editor with AI Suggestions</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -68,9 +68,11 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
+            transition: opacity 0.3s ease-in-out;
         }
         #stats {
-            text-align: right;
+            text-align: center;
+            flex: 1; /* Center by taking space */
         }
         #formatting-tools button {
             background-color: #ddd;
@@ -117,18 +119,10 @@
             display: none; /* Hide the entire toolbar bar in full screen */
         }
         .fullscreen #fullscreen-controls {
-            display: flex;
-            position: absolute;
-            top: 10px;
-            right: 10px;
-            z-index: 1000;
+            display: none; /* Hide top-right controls in full screen */
         }
         #fullscreen-controls {
             display: none;
-        }
-        .fullscreen #fullscreen-controls button {
-            padding: 4px 8px; /* Smaller buttons in full screen */
-            font-size: 14px;
         }
 
         /* Mobile-specific styles (applied via class or media query) */
@@ -199,12 +193,66 @@
                 margin-top: 10px;
             }
         }
+
+        /* Suggestion sidebar */
+        #suggestion {
+            background-color: #f0f0f0;
+            border-left: 1px solid #ccc;
+            padding: 10px;
+            display: none;
+            position: fixed;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            width: 300px;
+            overflow-y: auto;
+            z-index: 1000;
+        }
+        .dark-mode #suggestion {
+            background-color: #444;
+            color: #ddd;
+            border-left-color: #666;
+        }
+        #suggestion button {
+            margin-top: 5px;
+            display: block;
+        }
+        .option {
+            margin-bottom: 20px;
+            padding: 10px;
+            border-bottom: 1px solid #ddd;
+        }
+        .dark-mode .option {
+            border-bottom-color: #666;
+        }
+
+        /* Full screen footer buttons */
+        #fullscreen-footer-controls {
+            display: none;
+        }
+        .fullscreen #fullscreen-footer-controls {
+            display: flex;
+            margin-left: auto;
+        }
+        .fullscreen #fullscreen-footer-controls button {
+            padding: 4px 8px;
+            font-size: 14px;
+        }
+
+        /* Auto-hide footer in desktop mode */
+        #footer.hidden {
+            opacity: 0;
+            pointer-events: none;
+        }
+        #footer.visible {
+            opacity: 1;
+            pointer-events: auto;
+        }
     </style>
 </head>
 <body>
     <div id="toolbar">
         <button title="Save" onclick="handleSave()">S</button>
-        <button title="Load" onclick="loadText()">L</button>
         <button title="Clear" onclick="clearText()">C</button>
         <button title="Preview" onclick="togglePreview()">P</button>
         <button title="Toggle Dark Mode" onclick="toggleDarkMode()">🌙</button>
@@ -215,6 +263,9 @@
         <button title="Undo" onclick="undo()">Undo</button>
         <button title="Redo" onclick="redo()">Redo</button>
         <button title="Toggle Auto Save" onclick="toggleAutoSave()">A</button>
+        <button title="Gemini API Instructions" onclick="showApiInstructions()">i</button>
+        <button title="Set Gemini API Key" onclick="setApiKey()">API Key</button>
+        <button title="Get AI Suggestion" onclick="getAiSuggestion()">AI Suggest</button>
         <button id="fullscreen-btn" title="Toggle Full Screen" onclick="toggleFullScreen()">[ ]</button>
     </div>
     <div id="fullscreen-controls">
@@ -223,6 +274,7 @@
     </div>
     <div id="editor" contenteditable="true" placeholder="Start writing here..."></div>
     <div id="preview"></div>
+    <div id="suggestion"></div> <!-- Sidebar for AI suggestions -->
     <div id="footer">
         <div id="formatting-tools">
             <button title="Bold" onclick="formatText('bold')">B</button>
@@ -239,6 +291,11 @@
             <button title="Insert Footnote" onclick="formatText('footnote')">Footnote</button>
         </div>
         <div id="stats">Words: 0 | Characters: 0</div>
+        <div id="fullscreen-footer-controls">
+            <button title="Toggle Dark Mode" onclick="toggleDarkMode()">🌙</button>
+            <button title="Get AI Suggestion" onclick="getAiSuggestion()">AI Suggest</button>
+            <button title="Toggle Full Screen" onclick="toggleFullScreen()">[ ]</button>
+        </div>
     </div>
 
     <script>
@@ -258,6 +315,7 @@
         let historyIndex = -1;
         let autoSaveInterval = null;
         let isAutoSaveOn = false;
+        let footerTimeout;
 
         function updateStats() {
             const text = document.getElementById('editor').innerText;
@@ -358,83 +416,6 @@
             localStorage.setItem('savedText', text);
         }
 
-        function loadText() {
-            const savedText = localStorage.getItem('savedText');
-            if (savedText) {
-                document.getElementById('editor').innerText = savedText;
-                saveToHistory();
-                updateStats();
-            } else {
-                alert('No saved text found.');
-            }
-        }
-
-        function clearText() {
-            document.getElementById('editor').innerHTML = '';
-            saveToHistory();
-            updateStats();
-        }
-
-        function togglePreview() {
-            const preview = document.getElementById('preview');
-            const editor = document.getElementById('editor');
-            if (preview.style.display === 'none') {
-                preview.innerHTML = multiMarkdownToHtml(editor.innerText);
-                preview.style.display = 'block';
-                editor.style.display = 'none';
-            } else {
-                preview.style.display = 'none';
-                editor.style.display = 'block';
-            }
-        }
-
-        function multiMarkdownToHtml(text) {
-            // Basic MultiMarkdown parser (supports core features; not exhaustive)
-            // Headings
-            text = text.replace(/^###### (.*$)/gm, '<h6>$1</h6>');
-            text = text.replace(/^##### (.*$)/gm, '<h5>$1</h5>');
-            text = text.replace(/^#### (.*$)/gm, '<h4>$1</h4>');
-            text = text.replace(/^### (.*$)/gm, '<h3>$1</h3>');
-            text = text.replace(/^## (.*$)/gm, '<h2>$1</h2>');
-            text = text.replace(/^# (.*$)/gm, '<h1>$1</h1>');
-
-            // Bold and Italic
-            text = text.replace(/\*\*(.*)\*\*/gm, '<strong>$1</strong>');
-            text = text.replace(/\*(.*)\*/gm, '<em>$1</em>');
-
-            // Links and Images
-            text = text.replace(/!\[(.*?)\]\((.*?)\)/gm, '<img alt="$1" src="$2" />');
-            text = text.replace(/\[(.*?)\]\((.*?)\)/gm, '<a href="$2">$1</a>');
-
-            // Lists
-            text = text.replace(/^\s*[-*+] (.*)/gm, '<ul><li>$1</li></ul>');
-            text = text.replace(/^\s*\d+\. (.*)/gm, '<ol><li>$1</li></ol>');
-
-            // Blockquotes
-            text = text.replace(/^> (.*)/gm, '<blockquote>$1</blockquote>');
-
-            // Code Blocks
-            text = text.replace(/``````/gs, '<pre><code>$1</code></pre>');
-            text = text.replace(/`(.*?)`/g, '<code>$1</code>');
-
-            // Tables (basic support)
-            text = text.replace(/\|(.*?)\|/g, function(match) {
-                return match.replace(/\|/g, '</td><td>').replace(/^<\/td>/, '<tr><td>');
-            });
-            text = text.replace(/<tr><td>(.*?)<\/td><\/tr>/g, '<table><tbody>$&</tbody></table>');
-
-            // Footnotes (basic: [^[note]] becomes <sup>note</sup>)
-            text = text.replace(/\[\^(.+?)\]/g, '<sup id="fn-$1"><a href="#fnref-$1">$1</a></sup>');
-
-            // Horizontal Rule
-            text = text.replace(/^[-*]{3,}/gm, '<hr>');
-
-            // Line breaks
-            text = text.replace(/\n$/gm, '<br />');
-
-            return text;
-        }
-
         function toggleDarkMode() {
             document.body.classList.toggle('dark-mode');
         }
@@ -488,6 +469,90 @@
                 clearInterval(autoSaveInterval);
                 alert('Auto-save disabled');
             }
+        }
+
+        function showApiInstructions() {
+            alert('To get a Gemini API key:\n1. Visit https://aistudio.google.com/app/apikey\n2. Sign in with your Google account.\n3. Generate an API key.\n4. Copy and paste it using the "API Key" button in this app.');
+        }
+
+        function setApiKey() {
+            const apiKey = prompt('Enter your Gemini API Key:');
+            if (apiKey) {
+                localStorage.setItem('geminiApiKey', apiKey);
+                alert('API Key saved!');
+            }
+        }
+
+        async function getAiSuggestion() {
+            const apiKey = localStorage.getItem('geminiApiKey');
+            if (!apiKey) {
+                alert('Please set your Gemini API Key first.');
+                return;
+            }
+
+            const editor = document.getElementById('editor');
+            const text = editor.innerText.trim();
+            if (!text) {
+                alert('Please enter some text to get suggestions.');
+                return;
+            }
+
+            // Get the last sentence or paragraph for context
+            const context = text.split('\n').slice(-1)[0] || text; // Last line as context
+
+            const suggestionDiv = document.getElementById('suggestion');
+            suggestionDiv.innerHTML = 'Generating suggestion...';
+            suggestionDiv.style.display = 'block';
+
+            try {
+                const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash-latest:generateContent?key=${apiKey}`, {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify({
+                        contents: [{
+                            parts: [{
+                                text: `Suggest 5 options for the next sentence or continuation for this text, each with a different tone (e.g., Mysterious, Action-oriented, Humorous, Suspenseful, Simple). Format as: **Option 1 (Tone):** Text\n**Option 2 (Tone):** Text\netc.: "${context}"`
+                            }]
+                        }]
+                    })
+                });
+
+                if (!response.ok) {
+                    throw new Error('API request failed');
+                }
+
+                const data = await response.json();
+                const fullSuggestion = data.candidates[0].content.parts[0].text.trim();
+
+                // Parse the suggestions into individual options
+                const options = fullSuggestion.split(/\*\*Option \d+ \(/).filter(Boolean).map((opt, index) => {
+                    const [tonePart, ...textParts] = opt.split('):** ');
+                    const tone = tonePart.trim();
+                    const suggestionText = textParts.join('):** ').trim();
+                    return { number: index + 1, tone, text: suggestionText };
+                });
+
+                // Build HTML for each option
+                let html = '<strong>AI Suggestions:</strong><br>';
+                options.forEach(opt => {
+                    html += `<div class="option"><strong>Option ${opt.number} (${opt.tone}):</strong> ${opt.text}<br><button onclick="insertSuggestion('${opt.text.replace(/'/g, "\\'")}')">Insert</button></div>`;
+                });
+                html += '<button onclick="document.getElementById(\'suggestion\').style.display=\'none\'">Close</button>';
+
+                suggestionDiv.innerHTML = html;
+            } catch (error) {
+                suggestionDiv.innerHTML = 'Error generating suggestion. Check your API key or try again.';
+            }
+        }
+
+        function insertSuggestion(suggestion) {
+            const editor = document.getElementById('editor');
+            editor.innerText += ' ' + suggestion;
+            document.getElementById('suggestion').style.display = 'none';
+            saveToHistory();
+            updateStats();
         }
 
         // Formatting functions
@@ -552,8 +617,28 @@
         document.addEventListener('fullscreenchange', () => {
             const isFullscreen = !!document.fullscreenElement;
             document.body.classList.toggle('fullscreen', isFullscreen);
-            document.getElementById('fullscreen-controls').style.display = isFullscreen ? 'flex' : 'none';
+            document.getElementById('fullscreen-controls').style.display = 'none'; // Always hide top controls in full screen
+            document.getElementById('fullscreen-footer-controls').style.display = isFullscreen ? 'flex' : 'none';
         });
+
+        // Auto-hide footer in desktop mode
+        if (!isMobile()) {
+            const footer = document.getElementById('footer');
+            footer.classList.add('visible'); // Initial state
+
+            document.addEventListener('mousemove', (event) => {
+                clearTimeout(footerTimeout);
+                if (event.clientY > window.innerHeight - 100) { // Near bottom (100px threshold)
+                    footer.classList.remove('hidden');
+                    footer.classList.add('visible');
+                } else {
+                    footerTimeout = setTimeout(() => {
+                        footer.classList.remove('visible');
+                        footer.classList.add('hidden');
+                    }, 2000); // Hide after 2 seconds of no activity near bottom
+                }
+            });
+        }
 
         document.getElementById('editor').addEventListener('input', () => {
             saveToHistory();
