--- a/index.html
+++ b/index.html
@@ -137,93 +137,91 @@
             display: none;
         }
 
-        /* Mobile-specific styles for slider toolbar */
-        .mobile #toolbar {
-            position: fixed;
-            top: 0;
-            left: -100%; /* Hidden off-screen */
-            width: 250px;
-            height: 100vh;
-            flex-direction: column;
-            justify-content: flex-start;
-            padding: 20px;
-            transition: left 0.3s ease-in-out;
-            z-index: 2000;
-            overflow-y: auto;
-        }
-        .mobile #toolbar.open {
-            left: 0; /* Slide in from left */
-        }
-        .mobile button {
-            padding: 12px 16px;
-            font-size: 18px;
-            margin: 10px 0; /* Stack vertically */
-            width: 100%; /* Full width for easy tap */
-        }
-        .mobile #hamburger-btn {
-            position: fixed;
-            top: 10px;
-            left: 10px;
-            z-index: 3000;
-            display: block; /* Show hamburger in mobile */
-        }
-        #hamburger-btn {
-            display: none; /* Hidden in desktop */
-        }
-        .mobile #footer {
-            flex-direction: column;
-            align-items: center;
-        }
-        .mobile #formatting-tools {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-        }
-        .mobile #formatting-tools button {
-            padding: 8px 12px;
-            font-size: 16px;
-            margin: 5px;
-        }
-        .mobile #editor {
-            font-size: 18px;
-            padding: 15px;
-        }
-        .mobile #stats {
-            margin-top: 10px;
-        }
-
-        /* Responsive media query */
+        /* Mobile-specific styles (only change mobile) */
         @media (max-width: 768px) {
-            #toolbar {
+            #toolbar, #fullscreen-controls { /* Hide desktop toolbar */
+                display: none;
+            }
+            #footer { /* Keep footer but position at bottom for formatting buttons */
+                position: fixed;
+                bottom: 0;
+                left: 0;
+                right: 0;
+                padding: 5px;
+                background-color: #eee;
+                display: flex;
+                justify-content: center;
                 flex-wrap: wrap;
-                justify-content: flex-start;
-                overflow-x: auto;
+                z-index: 1000;
             }
-            button {
-                padding: 12px 16px;
-                font-size: 18px;
-                margin: 5px;
-            }
-            #footer {
-                flex-direction: column;
-                align-items: center;
+            .dark-mode #footer {
+                background-color: #444;
             }
             #formatting-tools {
                 display: flex;
-                flex-wrap: wrap;
                 justify-content: center;
+                flex-wrap: wrap;
             }
             #formatting-tools button {
-                padding: 8px 12px;
+                margin: 2px;
+                padding: 8px;
                 font-size: 16px;
-                margin: 5px;
-            }
-            #editor {
-                font-size: 18px;
-                padding: 15px;
             }
             #stats {
-                margin-top: 10px;
+                display: none; /* Hide stats on mobile to save space */
+            }
+            #fullscreen-footer-controls {
+                display: none; /* Hide duplicate controls on mobile */
+            }
+
+            /* Top bar for + - C F Undo Redo A Dark Full Screen */
+            #mobile-top-bar {
+                position: fixed;
+                top: 0;
+                left: 0;
+                right: 0;
+                background-color: #333;
+                padding: 10px;
+                display: flex;
+                justify-content: space-around;
+                z-index: 2000;
+            }
+            .dark-mode #mobile-top-bar {
+                background-color: #111;
+            }
+
+            /* Slider for API key, AI suggest, Proofread */
+            #mobile-slider {
+                position: fixed;
+                top: 50px; /* Below top bar */
+                left: -250px;
+                width: 250px;
+                background-color: #333;
+                padding: 20px;
+                transition: left 0.3s ease-in-out;
+                z-index: 1500;
+                overflow-y: auto;
+            }
+            #mobile-slider.open {
+                left: 0;
+            }
+            .dark-mode #mobile-slider {
+                background-color: #111;
+            }
+
+            /* Slider toggle button (e.g., hamburger) */
+            #slider-toggle {
+                position: fixed;
+                top: 10px;
+                left: 10px;
+                z-index: 2500;
+                display: block;
+            }
+
+            /* Give more room for writing */
+            #editor {
+                padding-top: 60px; /* Space for top bar */
+                padding-bottom: 60px; /* Space for footer */
             }
         }
 
@@ -290,7 +288,6 @@
     </style>
 </head>
 <body>
-    <button id="hamburger-btn" onclick="toggleMobileMenu()">☰</button> <!-- Hamburger for mobile slider -->
     <div id="toolbar">
         <button title="Save" onclick="handleSave()">S</button>
         <button title="Clear" onclick="clearText()">C</button>
